# autoheal-agent

./: .env.example  .gitignore  README.md  config.py  docker-compose.override.yml  promtail-config.yaml  pyproject.toml  server.py
agent/: __init__.py  aimodel.py  core.py  fingerprint.py  loop.py  models.py  prompts.py  registry.py  sandbox_subagent.py
agent/capabilities/: __init__.py  github.py  jaeger.py  loki.py  sandbox.py  source.py  web_search.py
agent/subagents/: sandbox.py
agent/verification/: confidence.py  ledger.py  verifier.py
evals/: README.md  evaluators.py  replay.py  run_investigation.py  run_sandbox.py  run_verifier.py
evals/cassettes/: adFailure.json  adHighCpu.json  cartFailure.json  intlShippingSlowdown.json  paymentFailure.json
evals/datasets/: flagd_cases.py  verifier_cases.py
evals/fixtures/buggy_repo/: null_deref.py  off_by_one.py  parse_error.py
static/: index.html
tests/: test_capabilities.py  test_confidence.py  test_fingerprint.py  test_ledger.py  test_loop.py  test_models.py  test_server.py  test_verifier.py
