[project]
name = "autoheal-agent"
version = "0.1.0"
description = "Autonomous debugging agent for production issues"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai==1.103.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
    "e2b",
    "tavily-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
